syntax = "proto3";

// Package workflowinstance contains the WorkflowInstanceSpec definition.
package ai.stigmer.agentic.workflowinstance.v1;

import "ai/stigmer/commons/apiresource/io.proto";
import "buf/validate/validate.proto";

// WorkflowInstanceSpec defines the user-configurable properties for a WorkflowInstance.
//
// This is the "Instance" layer in the Template→Instance→Execution pattern.
// It provides stateful configuration with environment bindings and secrets.
//
// The spec contains:
// - A reference to the Workflow template (the orchestration blueprint)
// - Descriptive metadata for humans
// - Environment references (layered configuration with secrets)
//
// Design Philosophy:
// WorkflowInstanceSpec separates "what to run" (Workflow) from "how to run it" (Environments).
// This allows the same Workflow template to be instantiated multiple times with different
// configurations (dev vs prod, different cloud accounts, different teams).
message WorkflowInstanceSpec {
  // Reference to the Workflow template this instance deploys.
  //
  // This links the instance to a reusable orchestration blueprint.
  // The Workflow defines which AgentInstances to orchestrate and in what order.
  //
  // Format: Workflow resource ID (e.g., "wfl-abc123")
  // Validation: Minimum length of 1 character (required field)
  //
  // Example: "wfl-abc123" (references a Workflow named "deploy-to-cloud")
  string workflow_id = 1 [(buf.validate.field).string.min_len = 1];

  // Human-readable description explaining what this instance is for.
  //
  // Use this to document:
  // - Purpose of this instance
  // - Environment it targets (dev, staging, prod)
  // - Team or project ownership
  // - Special configuration notes
  //
  // Examples:
  // - "Production CI/CD pipeline for main branch"
  // - "Staging environment deployment for feature testing"
  // - "Data pipeline for analytics team - runs daily at midnight"
  // - "Customer onboarding workflow for ACME Corp"
  string description = 2;

  // References to Environment resources providing configuration and secrets.
  //
  // Environments are layered configuration containers that provide:
  // - Environment variables (API keys, endpoints, flags)
  // - Secrets (credentials, tokens, passwords)
  // - Configuration values (timeouts, limits, settings)
  //
  // Layering Behavior:
  // Environments are merged in order - later environments override earlier ones.
  // This enables a base + overrides pattern:
  //
  // Example layering:
  //   [base-env, aws-prod-env, github-team-env]
  //   └─ base-env: Common settings for all instances
  //   └─ aws-prod-env: AWS production credentials (overrides base AWS settings)
  //   └─ github-team-env: Team-specific GitHub tokens (overrides generic tokens)
  //
  // Use Cases:
  // - Single env: [prod-env] - Simple, all config in one place
  // - Base + specific: [base, prod] - Common config + environment-specific
  // - Layered: [base, cloud, team] - Base + cloud credentials + team settings
  //
  // References use ApiResourceReference which supports:
  // - By ID: {id: "env-abc123"}
  // - By slug: {slug: "aws-prod-env"}
  //
  // At execution time, the WorkflowExecution runtime merges these environments
  // and provides the combined configuration to all agents in the workflow.
  repeated ai.stigmer.commons.apiresource.ApiResourceReference env_refs = 3;
}
